--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,15 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body class="hold-transition sidebar-mini layout-fixed mat-typography">
-    <app-root></app-root>
+  <app-root></app-root>
+  <!-- Control Sidebar -->
+  <aside class="control-sidebar control-sidebar-dark">
+    <!-- Control sidebar content goes here -->
+  </aside>
+  <!-- /.control-sidebar -->
+  </div>
 </body>
+
 </html>
